--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@hookform/resolvers": "^3.3.4",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/netinfo": "^11.3.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
+    "add": "^2.0.6",
     "axios": "^1.6.7",
     "i18next": "^23.10.0",
     "jwt-decode": "^4.0.0",
@@ -59,6 +61,8 @@
     "redux-persist-transform-compress": "^4.2.0",
     "redux-saga": "^1.3.0",
     "rn-fetch-blob": "^0.12.0",
+    "uuid": "^9.0.1",
+    "yarn": "^1.22.21",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -75,6 +79,7 @@
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "babel-jest": "^29.6.3",
