--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-orientation-locker": "^1.6.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.7.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
